--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "java.project.sourcePaths": ["src"],
-    "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.base.jar",
@@ -10,6 +8,10 @@
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.media.jar",
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.swing.jar",
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.web.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar"
+        "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\json-simple-1.1.jar"
+    ],
+    "java.project.sourcePaths": [
+        "CineMais\\src"
     ]
 }
