--- a/CineMais/.vscode/settings.json
+++ b/CineMais/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "java.project.sourcePaths": ["src"],
+    "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.base.jar",
