--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.swing.jar",
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.web.jar",
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\json-simple-1.1.jar"
+        "c:\\Users\\Jadson\\Downloads\\json_simple-1.1.jar"
     ],
     "java.project.sourcePaths": [
         "CineMais\\src"
