Fix: re-commit com novos templates

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,19 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch main",
+            "request": "launch",
+            "mainClass": "main",
+            "projectName": "CineMais_2fe52e85",
+            "vmArgs": "--module-path \"C:/Program Files/Java/javafx-sdk-18.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
             "name": "Launch App",
             "request": "launch",
             "mainClass": "App",
-            "projectName": "CineMais_f3a1f19e"
+            "projectName": "CineMais_f3a1f19e",
+            "vmArgs": "--module-path \"C:/Program Files/Java/javafx-sdk-18.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
